[gd_scene load_steps=2 format=3 uid="uid://biq0opb437m0n"]

[ext_resource type="Script" uid="uid://bq786fb1u0nov" path="res://3 GUI/Menus/host/host_menu.gd" id="1_6wre2"]

[node name="Host_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6wre2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Server Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="SteamButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Steam Multiplayer: Enabled"

[node name="AllowedUsersButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Allowed Users: Friends"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="hostButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox"]
layout_mode = 2
text = "Start"

[node name="backButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox/SteamButton" to="." method="_on_steam_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox/AllowedUsersButton" to="." method="_on_allowed_users_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons vbox/hostButton" to="." method="_on_host_button_pressed"]
